--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "sequelize-cli": "^6.6.0"
   },
   "scripts": {
-    "start": "node ./models/index.js"
+    "start": "node ./index.js"
   }
 }
